feat: Tarihi gizle özelliği eklendi - 2025 fuar sayfası
- CMS'e 'hide_dates' boolean field eklendi
- Content schema'ya hide_dates support eklendi
- TR: 'Tarih yakında açıklanacak' mesajı
- EN: 'Date will be announced soon' mesajı
- 2025 fuar sayfalarında hide_dates logic implement edildi
- CMS'te checkbox ile tarih gizleme kontrolü

--- a/src/pages/tr/2025-fuar-takvimi.astro
+++ b/src/pages/tr/2025-fuar-takvimi.astro
@@ -141,10 +141,15 @@ try {
       }
     }
 
-    // Generate date display from start_date and end_date
-    const displayDate = fair.basic_info.start_date && fair.basic_info.end_date 
-      ? formatDateRange(fair.basic_info.start_date, fair.basic_info.end_date, 'tr')
-      : fair.basic_info.date_tr || '';
+    // Generate date display from start_date and end_date - hide_dates kontrolü
+    let displayDate = '';
+    if (fair.basic_info.hide_dates) {
+      displayDate = 'Tarih yakında açıklanacak';
+    } else if (fair.basic_info.start_date && fair.basic_info.end_date) {
+      displayDate = formatDateRange(fair.basic_info.start_date, fair.basic_info.end_date, 'tr');
+    } else {
+      displayDate = fair.basic_info.date_tr || '';
+    }
 
     const fairItem = {
       id: fairsData[sector].length + 1,
