fix: 13.3 MacBook responsive duzeltmeleri
HERO CARD:
- lg:left-[320px] xl:left-[420px] (13.3 MacBook icin daha buyuk)
- lg:max-w-lg xl:max-w-md (13.3 MacBook icin daha genis)

SEKTOR DENEYIMI KARTI:
- translateX(180px) -> translateX(120px) (varsayilan)
- 1280-1536px: translateX(80px) (13.3 MacBook)
- 1440-1536px: translateX(100px) (buyuk 13.3)
- Hem TR hem EN sayfalarda guncellendi

RESPONSIVE BREAKPOINTS:
- 1280px: lg (tablet/kucuk laptop)
- 1440px: 13.3 MacBook Pro
- 1536px: xl (buyuk desktop)

SONUC: 13.3 MacBook'ta hero card daha buyuk ve sektor karti daha sola kaydi

--- a/src/components/HeroSlider.astro
+++ b/src/components/HeroSlider.astro
@@ -58,9 +58,9 @@ const { locale, heroData } = Astro.props;
   </div>
 
   <!-- Content -->
-  <div class="absolute left-1/2 transform -translate-x-1/2 sm:left-8 sm:transform-none lg:left-[420px] top-1/2 -translate-y-1/2 z-10">
+  <div class="absolute left-1/2 transform -translate-x-1/2 sm:left-8 sm:transform-none lg:left-[320px] xl:left-[420px] top-1/2 -translate-y-1/2 z-10">
     <!-- Hero Card -->
-    <div class="max-w-xs sm:max-w-sm lg:max-w-md">
+    <div class="max-w-xs sm:max-w-sm lg:max-w-lg xl:max-w-md">
       <div id="hero-card-container">
         <HeroCard locale={locale} card={heroData.slides[0].card} />
       </div>
