--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -213,12 +213,17 @@ const success = url.searchParams.get('success');
                       background-color: #CE1A28 !important;
                     }
                   }
-                  @media (min-width: 1728px) and (max-width: 1920px) {
+                  @media (min-width: 1728px) and (max-width: 2560px) {
                     .experience-card-en {
                       transform: translateX(20px) !important;
                     }
                   }
-                  @media (min-width: 1920px) {
+                  @media (min-width: 2560px) and (max-width: 3456px) {
+                    .experience-card-en {
+                      transform: translateX(40px) !important;
+                    }
+                  }
+                  @media (min-width: 3456px) {
                     .experience-card-en {
                       transform: translateX(60px) !important;
                     }
